--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -16,6 +16,11 @@
   margin: 0 auto;
 }
 
+.hero p {
+  color: #ffffff;
+  max-width: 70%;
+}
+
 .title {
   color: #f4ce14;
   font-family: "Markazi Text";
@@ -29,11 +34,6 @@
   font-size: 2rem;
   font-weight: medium;
   line-height: 0.8rem;
-}
-
-p {
-  color: #ffffff;
-  max-width: 70%;
 }
 
 .hero-info button {
