--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -13,3 +13,11 @@
   background-color: #495e57;
   color: white;
 }
+
+.button:disabled {
+  background-color: #7a857f;
+  color: #d1d1d1;
+  border-color: #7a857f;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
