--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -25,7 +25,6 @@
   color: #f4ce14;
   font-family: "Markazi Text";
   font-size: 3.5rem;
-  line-height: 0.5rem;
 }
 
 .subtitle {
@@ -54,19 +53,52 @@
 }
 
 @media screen and (max-width: 767px) {
+  .hero-background {
+    background: #495e57;
+    height: 100%;
+    display: flex;
+  }
+
   .hero {
+    height: 100%;
     padding: 2rem 1rem;
+    display: grid;
+    align-items: center;
+    grid-column-gap: 2rem;
+    grid-template: "info " "image";
     grid-template-columns: 1fr;
+    max-width: 65rem;
+    margin: 0 auto;
     margin-top: 96px;
   }
 
   .title {
+    color: #f4ce14;
     font-size: 32px;
+    line-height: 0.5rem;
+  }
+
+  .subtitle {
+    color: white;
+    font-size: 2rem;
+  }
+
+  p {
+    color: white;
   }
 
   .image {
+    grid-area: image;
+    width: 100%;
     height: 10rem;
     justify-self: middle;
+    border-radius: 16px;
+    object-fit: cover;
     margin-top: 1rem;
   }
+
+  .info {
+    grid-area: info;
+  }
 }
+
