--- a/src/components/Pages/Reservations/Reservations.css
+++ b/src/components/Pages/Reservations/Reservations.css
@@ -27,14 +27,13 @@
 }
 @media screen and (max-width: 767px) {
   .reservation {
-    height: calc(100vh - 96px);
+    padding-top: 96px;
     width: 100vw;
     max-width: 65rem;
     margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    
   }
 
   .reservation-card {
